[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Combat/Combat UI/BattleSlot.gd" type="Script" id=1]
[ext_resource path="res://assets/Textures/lifebar_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures/lifebar_fill.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures/bg.png" type="Texture" id=4]
[ext_resource path="res://assets/standard_font.tres" type="DynamicFont" id=5]

[node name="BattleSlot" type="Control"]
margin_right = 500.0
margin_bottom = 568.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="TextureRect" parent="."]
margin_right = 500.0
margin_bottom = 480.0
rect_min_size = Vector2( 480, 480 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 484.0
margin_right = 500.0
margin_bottom = 543.0
custom_constants/margin_right = 0
custom_constants/margin_left = 15
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Lifebar" type="HBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_right = 500.0
margin_bottom = 53.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Lifebar"]
margin_right = 9.0
margin_bottom = 53.0
custom_constants/margin_left = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/Lifebar"]
margin_left = 13.0
margin_right = 63.0
margin_bottom = 53.0
rect_min_size = Vector2( 50, 0 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="MarginContainer/Lifebar/NinePatchRect"]
margin_left = 10.0235
margin_top = 0.0568542
margin_right = 42.0235
margin_bottom = 46.0569
custom_fonts/font = ExtResource( 5 )
text = "10"

[node name="Gauge" type="TextureProgress" parent="MarginContainer/Lifebar"]
margin_left = 67.0
margin_right = 463.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModCounter" type="HBoxContainer" parent="."]
margin_left = 26.0
margin_top = 436.0
margin_right = 477.0
margin_bottom = 476.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EffectCounter" type="HBoxContainer" parent="ModCounter"]
margin_bottom = 40.0

[node name="Burn" type="NinePatchRect" parent="ModCounter/EffectCounter"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/EffectCounter/Burn"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -25.0
margin_right = 17.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.901961, 0.101961, 0.101961, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1

[node name="Frost" type="NinePatchRect" parent="ModCounter/EffectCounter"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/EffectCounter/Frost"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -25.0
margin_right = 17.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.0352941, 0.913725, 0.956863, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wet" type="NinePatchRect" parent="ModCounter/EffectCounter"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/EffectCounter/Wet"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -25.0
margin_right = 17.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.0588235, 0.0509804, 0.960784, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moss" type="NinePatchRect" parent="ModCounter/EffectCounter"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/EffectCounter/Moss"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -25.0
margin_right = 17.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.105882, 0.611765, 0.101961, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Charge" type="NinePatchRect" parent="ModCounter/EffectCounter"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 0 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/EffectCounter/Charge"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -25.0
margin_right = 17.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.941176, 0.94902, 0.0745098, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filler" type="Control" parent="ModCounter"]
margin_left = 4.0
margin_right = 447.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="StatCounter" type="HBoxContainer" parent="ModCounter"]
margin_left = 451.0
margin_right = 451.0
margin_bottom = 40.0

[node name="Stability" type="NinePatchRect" parent="ModCounter/StatCounter"]
visible = false
margin_right = 80.0
margin_bottom = 40.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 40 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/StatCounter/Stability"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -23.0
margin_right = 30.5
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "S+0"

[node name="Balance" type="NinePatchRect" parent="ModCounter/StatCounter"]
visible = false
margin_right = 80.0
margin_bottom = 40.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 40 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/StatCounter/Balance"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -23.0
margin_right = 30.5
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "B+0"

[node name="Leaf" type="NinePatchRect" parent="ModCounter/StatCounter"]
visible = false
margin_right = 80.0
margin_bottom = 40.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 40 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/StatCounter/Leaf"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -23.0
margin_right = 30.5
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "L+0"

[node name="Aroma" type="NinePatchRect" parent="ModCounter/StatCounter"]
visible = false
margin_right = 80.0
margin_bottom = 40.0
grow_horizontal = 0
rect_min_size = Vector2( 80, 40 )
texture = ExtResource( 4 )

[node name="Counter" type="Label" parent="ModCounter/StatCounter/Aroma"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -23.0
margin_right = 30.5
margin_bottom = 23.0
custom_fonts/font = ExtResource( 5 )
text = "A+0"
